--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -1079,22 +1079,17 @@
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fred', 'x': 5, 'y': 8, 'purchases': 60, 'distance': 1.0},\n",
-       " {'name': 'Steven',\n",
-       "  'x': 3,\n",
-       "  'y': 6,\n",
-       "  'purchases': 32,\n",
-       "  'distance': 2.23606797749979}]"
+       "[{'name': 'Fred', 'x': 5, 'y': 8, 'purchases': 60, 'distance': 1.0}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "bob = neighbors[0]\n",
-    "nearest_neighbor_to_bob = nearest_neighbors(bob, neighbors, 2)\n",
+    "nearest_neighbor_to_bob = nearest_neighbors(bob, neighbors, 1)\n",
     "nearest_neighbor_to_bob"
    ]
   },
